--- a/src/index.css
+++ b/src/index.css
@@ -131,13 +131,13 @@ form label{
   font-family: var(--font-Ubuntu);
 }
 
-.next-btn{
+.submit-btn{
   display: flex;
   justify-content: end;
   padding-top: 4rem;
 }
 
-.next-btn button{
+.submit-btn button{
   padding: 10px 20px;
   border-radius: 8px;
   border: none;
@@ -146,4 +146,110 @@ form label{
   font-family: var(--font-Ubuntu);
   font-size: 16px;
   cursor: pointer;
+}
+
+.select-plan h2{
+  padding-top: 2rem;
+  font-family: var(--font-Ubuntu);
+  color: var(--Blue-950);
+  font-size: 35px;
+}
+
+.select-plan p{
+  padding-top: 1rem;
+  font-family: var(--font-Ubuntu);
+  color: var(--Grey-500);
+  font-size: 18px;
+}
+
+.plans{
+  padding-top: 3rem;
+  display: flex;
+  gap: 25px;
+}
+
+.arcade,
+.advanced,
+.pro
+{
+  width: 150px;
+  border: 1px solid var(--Purple-600);
+  border-radius: 8px;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.arcade img, 
+.advanced img,
+.pro img
+{
+  padding: 1rem 0;
+  height: 80px;
+}
+
+.arcade h3,
+.advanced h3,
+.pro h3
+{
+  font-family: var(--font-Ubuntu);
+  color: var(--Blue-950);
+  padding-top: 2rem;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.arcade span,
+.advanced span,
+.pro span
+{
+  font-family: var(--font-Ubuntu);
+  color: var(--Grey-500);
+  font-size: 16px;
+}
+
+
+.toggle-btn{
+  padding: 3rem;
+}
+
+
+
+.buttons{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 4rem;
+}
+
+.back-btn{
+  background: none;
+  border: none;
+  color: var(--Blue-950);
+  font-family: var(--font-Ubuntu);
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.next-btn{
+  padding: 10px 20px;
+  border-radius: 8px;
+  border: none;
+  background-color: var(--Blue-950);
+  color: var(--White);
+  font-family: var(--font-Ubuntu);
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.finishing h2{
+    padding-top: 2rem;
+  font-family: var(--font-Ubuntu);
+  color: var(--Blue-950);
+  font-size: 35px;
+}
+
+.finishing p{
+   padding-top: 1rem;
+  font-family: var(--font-Ubuntu);
+  color: var(--Grey-500);
+  font-size: 18px;
 }
